# pixel-doodle

./: CLAUDE.md  Cargo.toml  bench_perf_data.json  bench_scaling_data.json  bench_tile_data.csv  notes.txt  run  run_all  run_all_pdl  run_pd  run_pdir  run_pdl  test_regression
.claude/: settings.local.json
docs/: backends.md  design-enum-variant-constructors.md  design-opaque-handle-types.md  optimization.md  pd.md  pdc.md  pdir.md  pdl.md  pdp.md  usage.md  wgpu-migration.md
editors/vscode-pdc/: language-configuration.json  package.json
examples/: checkerboard.pd  checkerboard.pdl  checkerboard.wgsl  circle.pdl  circle.wgsl  cornell_2d.pd  cornell_2d.pdl  gears.pd  gradient.pd  gradient.pdl  gradient.wgsl  light_transport_2d.pd  mandelbrot.pdl  pdc_basic.rs  ray_march_ao.wgsl  sdf.pdl  sdf_flower.pd  sdf_flower.pdl  sdf_rings.pd  sdf_rings.pdl  sdf_rings.wgsl  solid_red.pdl  solid_red.wgsl  starfield.pdl  vector_circle.rs  vector_stress.rs
examples/basic/: checkerboard.wgsl  gradient.pdc  gradient.wgsl  mandelbrot.pd  mandelbrot.wgsl  solid_red.pd  solid_red.pdc
examples/init/: gray_scott_u.pd  shallow_water_h.pd
examples/lighting/: cornell_2d.pdl  starfield.pd  (+2 more)
memory/: 01-language_design.md  01-project_language_design.md  02-parallel_execution.md  03-progressive_sampling.md  04-benchmarking.md  05-fluid-simulation.md  06-pdc-config-dsl.md  06-pdp-config-dsl.md  07-user-args-future.md  08-future-buffer-dimensions.md  09-builtin-var-const.md  10-texture-sampler-design.md  11-ui-and-project-merge.md  12-pdc-language-spec.md  13-pdc-pixel-kernels.md  user_background.md
src/: bench.rs  display.rs  kernel_ir.rs  lib.rs  main.rs  native_kernel.rs  progressive.rs  render.rs  simulation.rs  texture.rs
(+260 files in other folders)
